--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-lazy-load-image-component": "^1.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
